tests/paczka1/small_fuzzy/28763646.err
Error in line 11: PZpUodmLx6G A253 -3,0
